Update home and logo.

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -36,7 +36,7 @@
                     <div class="demo-text">
                         <h4><span>Demo 1</span> - Fashion</h4>
                         <div class="btn-group demo-btn" role="group" aria-label="Basic example">
-                            <a href="home/one" target="_blank" class="btn new-tab-btn">Preview</a>
+                            <a href="home/two" target="_blank" class="btn new-tab-btn">Preview</a>
                         </div>
                     </div>
                 </div>
