--- a/src/app/shared/header/widgets/navbar/navbar.component.html
+++ b/src/app/shared/header/widgets/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     </li>
    <li><a [routerLink]="">{{ 'home' | translate }}</a>
       <ul>
-        <li><a [routerLink]="'/home/one'" target="_blank">{{ 'Fashion-01' | translate }}</a></li>
+        <li><a [routerLink]="'/home/two'" target="_blank">{{ 'Fashion-01' | translate }}</a></li>
         <li><a [routerLink]="'/home/two'" target="_blank">{{ 'Fashion-02' | translate }}</a></li>
         <li><a [routerLink]="'/home/three'" target="_blank">{{ 'Fashion-03' | translate }}</a></li>
         <li><a [routerLink]="'/home/four'" target="_blank">{{ 'vegetable' | translate }}</a></li>
