--- a/src/app/shared/header/widgets/topbar/topbar.component.html
+++ b/src/app/shared/header/widgets/topbar/topbar.component.html
@@ -24,7 +24,7 @@
               </a>
             </li>
             <li>
-              <a [routerLink]="'/home/one'" data-lng="es">
+              <a [routerLink]="'/home/two'" data-lng="es">
                   {{ 'logout' | translate }}
               </a>
             </li>
