--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -20,7 +20,7 @@
 							<app-left-menu></app-left-menu>
 						</div>
 						<div class="brand-logo">
-							<a [routerLink]="['/home/one']">
+							<a [routerLink]="['/home/two']">
 								<img src="assets/images/icon/logo.png" class="img-fluid" alt="">
 							</a>
 						</div>
