--- a/src/app/shared/header/header-three/header-three.component.html
+++ b/src/app/shared/header/header-three/header-three.component.html
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                     <div class="brand-logo layout2-logo">
-                        <a [routerLink]="['/home/one']"><img src="assets/images/icon/logo.png" class="img-fluid" alt=""></a>
+                        <a [routerLink]="['/home/two']"><img src="assets/images/icon/logo.png" class="img-fluid" alt=""></a>
                     </div>
                     <div class="menu-right pull-right">
                         <app-header-widgets [shoppingCartItems]="shoppingCartItems"></app-header-widgets>
