--- a/src/app/shared/header/header-two/header-two.component.html
+++ b/src/app/shared/header/header-two/header-two.component.html
@@ -25,7 +25,7 @@
 					</div>
 					<div class="col-2">
 					<div class="brand-logo">
-						<a [routerLink]="['/home/one']"><img alt="" src="assets/images/icon/logo.png"></a>
+						<a [routerLink]="['/home/two']"><img alt="" src="assets/images/icon/logo.png"></a>
 					</div></div>
 					<div class="col">
 						<div class="menu-right pull-right">
